	
Sun Oct 19 15:20:16 CEST 2003

	- Need to check for both Informic compat modes when parsing include
	  files.
	  
Mon Oct 20 14:53:40 CEST 2003

	- Install dummy sqlda.h file.
	
Sun Oct 26 10:47:05 CET 2003

	- Fixed bug with indicators when storage for the
	  string is dynamically allocated
	  
Thu Oct 30 11:12:37 CET 2003

	- Applied patch by Dave Cramer fixing several bugs in compatlib.
	
Fri Oct 31 15:09:22 CET 2003

	- If EOF is found inside a string/comment/etc. stop parsing.
	
Mon Nov  3 15:43:19 CET 2003

	- Fixed a potentially uncleared allocation in compatlib.
	- Set ecpg version to 3.0.0
	- Set ecpg library to 4.0.0
	- Set pgtypes library to 1.0.0
	- Set compat library to 1.0.0

Wed Dec  3 09:45:21 CET 2003

	- Added patch for array handling by Dave Cramer
	
Wed Dec 17 16:11:16 CET 2003

	- Added just another patch by Dave that fixes a reversed order in
	  variable listing for output variables in cursor definitions
	- Fixed incorrect if call in long=>numeric conversion.
	- Set ecpg version to 3.1.0
	- Set ecpg library to 4.1.0
	- Set pgtypes library to 1.1.0
	- Set compat library to 1.1.0

Mon Jan 26 21:57:14 CET 2004

	- Issue a warning if a cursor is declared but not opened.
	- Fixed prototype for ECPGprepared_statement to not moan about "const
	  char"
	- Fixed parsing of nested structures.
	- Added option to parse header files.

Sun Feb 15 14:44:14 CET 2004

	- Added missing braces to array parsing.
	- Allowed some C keywords to be used as SQL column names.
	
Mon Feb 16 08:17:19 CET 2004

	- Cleaned up parser a little bit. It does not make sense to allow a
	  typename to be typedef'ed that cannot be parsed as variable type.
	- Allowed some SQL keywords to be used as C variable names.

Tue Feb 24 16:48:57 CET 2004

	- Corrected error handling in PGTYPEStimestamp_from_asc.
	
Mon Mar  1 08:56:37 CET 2004
	
	- Added partly missing VOLATILE keyword.
	- Set pgtypeslib version to 1.2.
	- Set ecpg version to 3.2.0.
